<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.to.markdownnote.activity.EditorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_file_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/file_output"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/output_file_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/output_file_name"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_file_output"
            app:layout_constraintTop_toBottomOf="@+id/title_file_output" />

        <Button
            android:id="@+id/output_button_file_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:text="@string/output"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/output_file_name_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/output_file_name_edit_text" />

        <Button
            android:id="@+id/cancel_button_file_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="0dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/output_button_file_output"
            app:layout_constraintEnd_toStartOf="@+id/output_button_file_output"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/output_button_file_output" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>